NEWS
====

Versioning
----------

Releases will be numbered with the following semantic versioning format:

<major>.<minor>.<patch>

And constructed with the following guidelines:

* Breaking backward compatibility bumps the major (and resets the minor
  and patch)
* New additions without breaking backward compatibility bumps the minor
  (and resets the patch)
* Bug fixes and misc changes bumps the patch


lexicon 1.0.1 - 
----------------------------------------------------------------

BUG FIXES

NEW FEATURES

* `profanity_zac_anger` added to provide a longer list of profane words.

MINOR FEATURES

IMPROVEMENTS

CHANGES

